Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <h1>
 <a id="welcome-to-the-xxx-beta-program" class="anchor" href="#welcome-to-the-xxx-beta-program" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the XXX Beta Program</h1>
 
-<p>It this stage we are seeking your testing and feedback on the first version of the plugin</p>
+<p>Thanks for signing up! It this stage we are seeking your testing and feedback on the first version of the plugin. See the <a href="https://github.com/jawilli312/ITS-Beta-Test/wiki">Wiki</a> for the plugin overview, FAQ, Known Issues, and How to implement optimized BCn texture compression in your own app.</p>
 
 <h2>
-<a id="issues" class="anchor" href="#issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues</h2>
+<a id="logging-bugs-feedback-and-feature-requests" class="anchor" href="#logging-bugs-feedback-and-feature-requests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logging Bugs, Feedback and Feature Requests</h2>
 
 <p>Please use the following tags in your subjects when posting <a href="https://github.com/jawilli312/ITS-Beta-Test/issues">issues here</a></p>
 
@@ -85,6 +85,8 @@
 <li>Select desired mipmap loading options if applicable</li>
 <li>Select desired color profile loading options</li>
 </ol>
+
+<p>NOTE: Not all authoring apps can read the latest BCn textures. We're keeping a running list of app load status on the Wiki. To implement BCn texture compression in your own apps and engines <a href="software.intel.com/en-us/articles/fast-ispc-texture-compressor-update">download the sample source code here</a></p>
       </section>
     </div>
 
