Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p>Thanks for signing up! It this stage we are seeking your testing and feedback on the first version of the plugin. See the <a href="https://github.com/jawilli312/ITS-Beta-Test/wiki">Wiki</a> for the plugin overview, FAQ, Known Issues, and How to implement optimized BCn texture compression in your own app.</p>
 
+<p>Before you get started, if you haven't already signed up, <a href="https://software.intel.com/photoshop-compression-plugin/beta">please do so here.</a>.</p>
+
 <h2>
 <a id="logging-bugs-feedback-and-feature-requests" class="anchor" href="#logging-bugs-feedback-and-feature-requests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logging Bugs, Feedback and Feature Requests</h2>
 
@@ -86,7 +88,7 @@
 <li>Select desired color profile loading options</li>
 </ol>
 
-<p>NOTE: Not all authoring apps can read the latest BCn textures. We're keeping a running list of app load status on the Wiki. To implement BCn texture compression in your own apps and engines <a href="software.intel.com/en-us/articles/fast-ispc-texture-compressor-update">download the sample source code here</a></p>
+<p>NOTE: Not all authoring apps can read the latest BCn textures. We're keeping a running list of app load status on the Wiki. To implement BCn texture compression in your own apps and engines <a href="https://software.intel.com/en-us/articles/fast-ispc-texture-compressor-update">download the sample source code here</a></p>
       </section>
     </div>
 
