Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
         </div>
 
         <h1>
-<a id="intel-texture-works-plugin-for-photoshop" class="anchor" href="#intel-texture-works-plugin-for-photoshop" aria-hidden="true"><span class="octicon octicon-link"></span></a>Intel® Texture Works Plugin for Photoshop</h1>
-
-<h1>
 <a id="welcome-to-the--beta-testing-program" class="anchor" href="#welcome-to-the--beta-testing-program" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the  Beta Testing Program</h1>
 
 <p>In this stage we are graciously seeking your time to test and provide feedback on the first version of the plugin in order to make sure everything works as it should and gets better if it needs to. With your help it should become a very useful tool for us all.</p>
@@ -71,9 +68,6 @@
 <h2>
 <a id="saving-files-via-plugin" class="anchor" href="#saving-files-via-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Saving Files via Plugin</h2>
 
-<h3>
-<a id="initiating-plugin-save-as" class="anchor" href="#initiating-plugin-save-as" aria-hidden="true"><span class="octicon octicon-link"></span></a>Initiating Plugin "Save As"</h3>
-
 <ol>
 <li>File &gt; Save As</li>
 <li>Select "Save as type" &gt; <strong>Intel® Texture Works (*.DDS;*.DDS)</strong>
@@ -85,8 +79,8 @@
 <li>Ok</li>
 </ol>
 
-<h3>
-<a id="loading-files-saved-via-plugin" class="anchor" href="#loading-files-saved-via-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Loading Files Saved via Plugin</h3>
+<h2>
+<a id="loading-files-saved-via-plugin" class="anchor" href="#loading-files-saved-via-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>Loading Files Saved via Plugin</h2>
 
 <p>Multiple resident DDS plugins can result in a texture display error on load. To avoid this, use the following process to reload textures saved with the Intel® Texture Works plugin for Photoshop</p>
 
@@ -98,13 +92,13 @@
 <li>Select desired color profile loading options</li>
 </ol>
 
-<h3>
-<a id="logging-bugs-enhancements--feedback" class="anchor" href="#logging-bugs-enhancements--feedback" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logging Bugs, Enhancements, &amp; Feedback</h3>
+<h2>
+<a id="logging-bugs-enhancements--feedback" class="anchor" href="#logging-bugs-enhancements--feedback" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logging Bugs, Enhancements, &amp; Feedback</h2>
 
 <p>Use the <a href="https://github.com/GameTechDev/ITW-Beta-Test/issues">GitHub Issue tracking/labeling system</a> to log your bugs, enhancement (requests), and feedback (general impressions appreciated). <strong>Labels really help here - please use them</strong>.</p>
 
-<h3>
-<a id="note" class="anchor" href="#note" aria-hidden="true"><span class="octicon octicon-link"></span></a>NOTE:</h3>
+<h2>
+<a id="note" class="anchor" href="#note" aria-hidden="true"><span class="octicon octicon-link"></span></a>NOTE:</h2>
 
 <ul>
 <li>Not all authoring apps can read the latest BCn textures. We're keeping a running list of authoring app BCn load status on the Wiki <a href="https://github.com/GameTechDev/ITW-Beta-Test/wiki/BCn-App-Support">here</a>
@@ -113,6 +107,9 @@
 </li>
 <li>The <a href="https://github.com/GameTechDev/ITW-Beta-Test/wiki/FAQ">FAQ</a> is also available on the Wiki</li>
 </ul>
+
+<pre><code>* Other names and brands may be claimed by their owners.
+</code></pre>
       </section>
 
     </div>
