Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
 <ol>
 <li>Close Photoshop</li>
-<li>Download the IntelTextureWorks-beta1.zip file and expand it on your local computer</li>
+<li>Download the ITW-Beta-Test-master.zip file and expand it on your local computer</li>
 <li>Copy the desired plugin from either of the following unzipped folders
 
 <ul>
-<li>IntelTextureWorks-beta1\Plugins\x64\IntelTextureWorks.8bi </li>
-<li>IntelTextureWorks-beta1\Plugins\Win32\IntelTextureWorks.8bi</li>
+<li>.../IntelTextureWorks-Beta1\Plugins\x64\IntelTextureWorks.8bi</li>
+<li>.../IntelTextureWorks-Beta1\Plugins\Win32\IntelTextureWorks.8bi</li>
 </ul>
 </li>
 <li>Paste the plugin into the appropriate Photoshop Plugin folder
