--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/GameTechDev/ITW-Beta-Test">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/GameTechDev/ITW-Beta-Test/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/GameTechDev/ITW-Beta-Test/tarball/master">TAR</a></li>
+          <li class="downloads"><a href="https://github.com/GameTechDev/ITW-Beta-Test/releases/download/Beta01/IntelTextureWorks-Beta1.zip">ZIP</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
