--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
 <li>The <a href="https://github.com/GameTechDev/ITW-Beta-Test/wiki/FAQ">FAQ</a> is also available on the Wiki</li>
 </ul>
 
+<h2>
+<a id="note" class="anchor" href="#note" aria-hidden="true"><span class="octicon octicon-link"></span></a>Beta Requirements</h2>
+
+<ul>
+<li>* Windows* (32/64) versions 7, 8, 10
+</li>
+<li>* Photoshop* CS6 through CC2015
+</li>
+</ul>
+
 <pre><code>* Other names and brands may be claimed by their owners.
 </code></pre>
       </section>
