Corrected beta requirements list bullets

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 <a id="note" class="anchor" href="#note" aria-hidden="true"><span class="octicon octicon-link"></span></a>Beta Requirements</h2>
 
 <ul>
-<li>* Windows* (32/64) versions 7, 8, 10
+<li>Windows* (32/64) versions 7, 8, 10
 </li>
-<li>* Photoshop* CS6 through CC2015
+<li>Photoshop* CS6 through CC2015
 </li>
 </ul>
 
