--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -21,8 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/GameTechDev/Intel-Texture-Works-Plugin">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/GameTechDev/Intel-Texture-Works-Plugin/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/GameTechDev/Intel-Texture-Works-Plugin/tarball/master">TAR</a></li>
+          <li class="downloads"><a href="https://github.com/GameTechDev/ITW-Beta-Test/releases/download/ITW_1.0.4/IntelTextureWorks_1.0.4.zip">ZIP</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
